--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "bable-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.6.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "framer-motion": "^1.6.15",
